Fixing alignment of thumbnail grid items so hover is not triggered below short items that are next to tall items per issue #62

--- a/assets/styles/helpers/_common.scss
+++ b/assets/styles/helpers/_common.scss
@@ -73,6 +73,8 @@ h4.lined {
 
 // Thumbnail grid (project/ideas)
 .thumbnail-grid {
+  align-items: flex-start;
+
   .project {
     .project-image {
       img {
